--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -123,7 +123,12 @@ img {
 
 ::-webkit-scrollbar-thumb {
     background: var(--tertiary);
+    border: 5px solid var(--theme);
     border-radius: var(--radius)
+}
+
+.list:not(.dark)::-webkit-scrollbar-thumb {
+    border: 5px solid var(--code-bg)
 }
 
 ::-webkit-scrollbar-thumb:hover {
